Change base 64 encoder API.